--- a/index.html
+++ b/index.html
@@ -44,8 +44,11 @@
           </div>
         </div> -->
       </div>
+      <!-- <div id="message">Loading...</div> -->
     </main>
-    <button id="scrollToTopButton"><i class="fa-solid fa-arrow-up"></i></button>
+    <button id="scrollToTopButton" class="hidden">
+      <i class="fa-solid fa-arrow-up"></i>
+    </button>
     <script src="script.js"></script>
   </body>
 </html>
