fix loading message

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           </div>
         </div> -->
       </div>
-      <!-- <div id="message">Loading...</div> -->
+      <div id="message" class="hidden">Loading...</div>
     </main>
     <button id="scrollToTopButton" class="hidden">
       <i class="fa-solid fa-arrow-up"></i>
